syntax = "proto3";

package api;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service UsersSync {
    rpc EnqueueOrgDeletedSync(EnqueueOrgDeletedSyncRequest) returns (EnqueueOrgDeletedSyncResponse) {};
    rpc EnforceWeeklyReporterJob(EnforceWeeklyReporterJobRequest) returns (EnforceWeeklyReporterJobResponse) {};
}

message EnqueueOrgDeletedSyncRequest {
    string OrgExternalID = 1;
}
message EnqueueOrgDeletedSyncResponse {}

message EnforceWeeklyReporterJobRequest {}
message EnforceWeeklyReporterJobResponse {}
